# Lion

./: .gitignore  CMakeLists.txt  gen_vc_sln.bat  readme.md
RenderAPI/: RenderAPI.h
Source/Common/: BaseAPIGlobal.cpp  BaseAPIGlobal.h  BaseAPIInstance.cpp  BaseAPIInstance.h  Logger.cpp  Logger.h  RenderAPI.cpp  RenderAPI.rc  RenderAPIExport.def  RenderStatistic.cpp  RenderStatistic.h  resource.h
Source/DX9API/: APIContext.cpp  APIContext.h  APIGlobal.cpp  APIGlobal.h  APIInstance.cpp  APIInstance.h  AutoPtr.hpp  BlendState.cpp  CMakeLists.txt  Context.cpp  Context.h  ContextLegacy.cpp  DX9Include.cpp  DX9Include.h  DepthStencil.cpp  DepthStencil.h  Device.cpp  Device.h  EffectStateManager.hpp  EnumMapping.cpp  EnumMapping.h  FXEffect.cpp  FXEffect.h  IndexBuffer.cpp  IndexBuffer.h  InternalLogger.h  NoLockableTexture2D.cpp  OcclusionQuery.cpp  OcclusionQuery.h  RefCount.hpp  RenderAPIImpl.cpp  RenderAPIImpl.h  RenderStatistic.cpp  RenderStatistic.h  RenderTarget.cpp  RenderTarget.h  RenderTexture2D.cpp  StateManager.cpp  StateManager.h  SwapChain.cpp  (+11 more)
Source/FixedAPI/: APIInstance.cpp  APIInstance.h  CMakeLists.txt  Context.cpp  Context.h  ContextLegacy.cpp  Device.cpp  EnumMapping.cpp  FXEffect.cpp  IndexBuffer.cpp  IndexBuffer.h  InternalLogger.h  NoLockableTexture2D.cpp  OcclusionQuery.h  RenderStatistic.cpp  RenderStatistic.h  RenderTexture2D.cpp  StateManager.cpp  StateManager.h  SwapChain.cpp  SwapChain.h  Texture2D.cpp  TextureCube.cpp  TextureCube.h  TextureSampler.cpp  VertexBuffer.cpp  VertexBuffer.h  VertexDeclaration.cpp  VertexDeclaration.h
Source/Math/: gmlmatrix.h  gmlray.h  gmlrect.h  gmlvector.h
Source/NullAPI/: APIGlobal.cpp  APIGlobal.h  APIInstance.cpp  APIInstance.h  AutoPtr.hpp  CMakeLists.txt  Context.cpp  Context.h  ContextLegacy.cpp  DX9Include.h  DepthStencil.cpp  DepthStencil.h  Device.cpp  Device.h  FXEffect.cpp  FXEffect.h  IndexBuffer.cpp  IndexBuffer.h  InternalLogger.h  NoLockableTexture2D.cpp  OcclusionQuery.cpp  OcclusionQuery.h  RenderAPIImpl.cpp  RenderAPIImpl.h  RenderStatistic.cpp  RenderStatistic.h  RenderTarget.cpp  RenderTarget.h  RenderTexture2D.cpp  StateManager.cpp  StateManager.h  SwapChain.cpp  SwapChain.h  TextBox.cpp  TextBox.h  Texture2D.cpp  Texture2D.h  TextureCube.cpp  TextureCube.h  VertexBuffer.cpp  (+3 more)
Win32TestBed/: CMakeLists.txt  Particle.fx  SimpleTexture.fx  TintColor.fx  box.hpp  main.cpp  particle.cpp  particle.h  pch.h  testbed.cpp  testbed.h
Win32TestBed/image/: file_data.h  img_data.h
Win32TestBed/image/impl/: bmp.cpp  dds.cpp  file_data.cpp  img_data.cpp  inner_include.cpp  inner_include.h  png.cpp  tga.cpp
Win32TestBed/math/: gmlaabb.h  gmlangle.h  gmlcolor.h  gmlconversion.h  gmldualquat.h  gmlrotation.h  gmlutility.h
